# YOLOXu

./: .gitignore  CMakeLists.txt  README  README.md
src/: error.cuh  infer.cpp  infer.h  kernel_function.cu  kernel_function.h  main.cpp  multi.cpp  utils.cpp  utils.h  yolo.cpp  yolo.h  yolox.cpp
